--- a/css/shop.css
+++ b/css/shop.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost&family=Manrope&display=swap');
 
-*{
+* {
     font-family: 'Jost', sans-serif;
     margin: 0;
     padding: 0;
@@ -21,19 +21,20 @@ body {
 }
 
 
-header{
+header {
     width: 100%;
     box-shadow: 0 1px 3px rgba(156, 156, 156, 0.761);
     z-index: 100;
     background-color: rgb(233, 238, 255)
 }
 
-a, .logo-btn div{
+a,
+.logo-btn div {
     text-decoration: none;
     color: rgb(34, 33, 33);
 }
 
-.navbar{
+.navbar {
     width: 100%;
     height: 60px;
     position: fixed;
@@ -43,17 +44,18 @@ a, .logo-btn div{
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     padding-left: 20px;
     font-weight: bold;
     font-size: 20px;
 }
 
-.logo a{
+.logo a {
     color: rgb(146, 167, 236);
 }
 
-.menu, .logo-btn{
+.menu,
+.logo-btn {
     padding-right: 25px;
     display: flex;
     gap: 1rem;
@@ -61,109 +63,110 @@ a, .logo-btn div{
     font-size: 15px;
 }
 
-.menu{
+.menu {
     margin-left: 20%;
 }
 
-.menu a:hover, .logo-btn a:hover, .logo-btn div:hover{
+.menu a:hover,
+.logo-btn a:hover,
+.logo-btn div:hover {
     color: rgb(146, 167, 236);
 }
 
-#menu-btn{
+#menu-btn {
     display: none;
 }
-/*////////////////////////////////////////////////////////////////////*/
 
-#login-btn{
+.active {
+    color: rgb(146, 167, 236);
+}
+/*////////////////////////////////////////////////////////////////////*/
+#login-btn {
     cursor: pointer;
 }
 
-.login-form{
+.login-form {
     position: absolute;
     top: 120%;
-    right: 2rem;
-    width: 18rem;
+    right: 15px;
+    width: 250px;
     padding: 20px;
-    font-size: .8rem;
+    font-size: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    border-radius: 1.2rem;
+    border-radius: 15px;
     display: none;
     background-color: rgba(225, 231, 249, 0.917);
     z-index: 1000;
-} 
-
-h3{
-    font-size: 1.2rem;
-    padding-bottom: .5rem;
 }
 
-.box{
+h3 {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.box {
     width: 100%;
-    border-bottom: .1rem solid black;
-    border-width: .1rem;
-    padding: .5rem 0;
-    font-size: .8rem;
+    border-bottom: 5px solid black;
+    border-width: 1px;
+    padding: 5px 0;
+    font-size: 12px;
     text-transform: none;
-    margin: .4rem 0;
+    margin: 9px 0;
     outline: none;
     background: none;
 }
 
-.box:focus{
-    border-bottom: .1rem solid rgba(146, 167, 236, 0.497)
+.box:focus {
+    border-bottom: .1rem solid rgba(146, 167, 236, 0.748)
 }
 
-.remember{
+.remember {
     display: flex;
     align-items: center;
-    gap: .2rem;
-    padding: .5rem 0;
+    gap: 2px;
+    padding: 10px 0;
 }
 
-.remember label{
-    font-size: .8rem;
+.remember label {
+    font-size: 10px;
     cursor: pointer;
 }
 
 
-.remember input{
-    accent-color:  rgb(146, 167, 236)
+.remember input {
+    accent-color: rgb(146, 167, 236)
 }
 
-.btn{
+.btn {
     align-self: center;
     width: 100%;
-    margin: .5rem 0;
-    border-radius: 1.3rem;
-    padding: .2rem 0;
+    margin: 8px 0;
+    border-radius: 20px;
+    padding: 2px 0;
     cursor: pointer;
     background: none;
-    font-size: 1rem;
+    font-size: 12px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.409);
 }
 
-.btn:hover{
+.btn:hover {
     background-color: rgba(146, 167, 236, 0.497);
     color: white;
 }
 
-.links{
+.links {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: .3rem;
-    font-size: .7rem;
+    margin-top: 5px;
+    font-size: 9px;
 }
 
-.links a:hover{
+.links a:hover {
     text-decoration: underline;
-    color: rgb(146, 167, 236);
-}
-
-.active{
     color: rgb(146, 167, 236);
 }
 
@@ -171,7 +174,7 @@ h3{
 
 
 .footer {
-    margin-top: auto; 
+    margin-top: auto;
     width: 100%;
     height: auto;
     background-color: rgba(186, 193, 217, 0.516);
@@ -181,27 +184,27 @@ h3{
     padding: 20px 0;
 }
 
-.footer-text{
+.footer-text {
     font-size: small;
     color: rgb(113, 118, 135);
 }
 
 /*//////////////////////////////////////////////////////////////*/
 
-.main-body h1{
+.main-body h1 {
     color: #000;
     text-align: center;
 }
 
-.main-body h1 span{
+.main-body h1 span {
     color: rgb(146, 167, 236);
 }
 
-.main-body{
+.main-body {
     margin: 100px 0;
 }
 
-.product-container{
+.product-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -211,36 +214,37 @@ h3{
     margin-top: 30px;
 }
 
-.product-outbox{
+.product-outbox {
     position: relative;
     overflow: hidden;
     margin: 20px;
     width: 180px;
     height: 280px;
 
-    .product-img{
-        width: 100%; 
+    .product-img {
+        width: 100%;
         height: 180px;
         overflow: hidden;
-        
-        img{
+
+        img {
             height: 100px;
             width: 100px;
         }
 
     }
 
-    &:hover{
-        .icons{
+    &:hover {
+        .icons {
             transform: translateX(0px);
         }
-        .product-img img{
+
+        .product-img img {
             transform: scale(1.04);
         }
     }
 }
 
-.product-description{
+.product-description {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -251,32 +255,32 @@ h3{
 }
 
 
-.product-description h3{
+.product-description h3 {
     font-size: 13px;
     color: black;
     padding-bottom: 10px;
     position: absolute;
     top: 20px;
-    
+
 }
 
-.product-description .price{
+.product-description .price {
     font-size: 13px;
-    color:rgb(95, 109, 156);
+    color: rgb(95, 109, 156);
     position: absolute;
     bottom: 15px;
-    
-    }
+
+}
 
 
-.icons{
+.icons {
     position: absolute;
     right: 10px;
     z-index: 10;
     transform: translateX(80px);
 }
 
-.icons a{
+.icons a {
     display: block;
     width: 25px;
     height: 21px;
@@ -290,48 +294,49 @@ h3{
     background: white;
     color: black;
 
-    &:hover{
+    &:hover {
         color: #ffffff;
         background-color: #92a7ec;
     }
 }
+
 /*//////////////////////////////RESPONSIVE////////////////////////////*/
 
-@media only screen and (max-width: 991px){
+@media only screen and (max-width: 991px) {
 
-    html{
+    html {
         font-size: 67%;
     }
 
-.product-outbox{
-    position: relative;
-    overflow: hidden;
-    margin: 20px;
-    width: 150px;
-    height: 300px;
-
-    .product-img{
-        width: 100%; 
-        height: 180px;
+    .product-outbox {
+        position: relative;
         overflow: hidden;
-        
-        img{
-            height: 80px;
-            width: 80px;
+        margin: 20px;
+        width: 150px;
+        height: 300px;
+
+        .product-img {
+            width: 100%;
+            height: 180px;
+            overflow: hidden;
+
+            img {
+                height: 80px;
+                width: 80px;
+            }
+
         }
-
     }
-}
 
-.product-description .price{
-    bottom: 5px;
+    .product-description .price {
+        bottom: 5px;
     }
 
 }
 
 @media only screen and (max-width: 640px) {
 
-    .product-container{
+    .product-container {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -340,8 +345,8 @@ h3{
         width: 100%;
         margin-top: 30px;
     }
-    
-    .product-outbox{
+
+    .product-outbox {
         background-color: #92a7ec3c;
         display: flex;
         justify-content: flex-start;
@@ -352,67 +357,70 @@ h3{
         width: 100%;
         height: 100%;
 
-    
-        .product-img{
-            width: 120px; 
+
+        .product-img {
+            width: 120px;
             height: 120px;
             overflow: unset;
-            
-            img{
+
+            img {
                 height: 120px;
                 width: 120px;
             }
-    
-        }
-        &:hover{
-            .icons{
-                transform: translateX(-5px);
-            }
-            .product-img img{
-                transform: scale(1.04);
-            }
-    }
-    
-    .product-description{
-        padding-left: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        height: 100px;
-        text-align: left;
-        position: unset;
-        
-    }
-    
-    
-    .product-description h3{
-        font-size: 13px;
-        color: black;
-        padding-bottom: 0;
-        position: unset;
-        
-    }
-    
-    .product-description .price{
-        font-size: 13px;
-        color:rgb(95, 109, 156);
-        position: unset;
-        
+
         }
 
-        .icons{
+        &:hover {
+            .icons {
+                transform: translateX(-5px);
+            }
+
+            .product-img img {
+                transform: scale(1.04);
+            }
+        }
+
+        .product-description {
+            padding-left: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            height: 100px;
+            text-align: left;
+            position: unset;
+
+        }
+
+
+        .product-description h3 {
+            font-size: 13px;
+            color: black;
+            padding-bottom: 0;
+            position: unset;
+
+        }
+
+        .product-description .price {
+            font-size: 13px;
+            color: rgb(95, 109, 156);
+            position: unset;
+
+        }
+
+        .icons {
             position: absolute;
-            right: 10px; top: 0px;
+            right: 10px;
+            top: 0px;
             z-index: 10;
             transform: translateX(100px);
             display: flex;
             flex-direction: row;
             gap: 5px;
         }
-        
 
-        .icons a{
+
+        .icons a {
             display: block;
             width: 20px;
             height: 19px;
@@ -425,83 +433,83 @@ h3{
             background: white;
             color: black;
 
-            &:hover{
+            &:hover {
                 color: #ffffff;
                 background-color: #92a7ec;
             }
         }
-}
-
-    
-         
-/*//////////////////////////Nav Bar//////////////////////////////*/
-
-.menu{
-    display: none;
-}
+    }
 
 
-.menu.active {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    right: 0;
-    background-color: rgb(233, 238, 255);
-    width: 100%;
-    padding-left: 20px;
-    margin-right: 0;
-    z-index: 1000;
-}
 
-.menu a{
-    padding: 10px;
-    text-align: center;
-    width: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
+    /*//////////////////////////Nav Bar//////////////////////////////*/
 
-#menu-btn {
-    display: block;
-    cursor: pointer;
-}
-
-.fas.fa-times {
-    display: none;
-    } 
-    
-.fa-bars.active{
+    .menu {
         display: none;
     }
 
-.fa-times.active {
-    display: block;
-}
 
-.logo {
-padding-left: 20px;
-font-weight: bold;
-font-size: 20px;
-margin-left: 0;
-}
+    .menu.active {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: rgb(233, 238, 255);
+        width: 100%;
+        padding-left: 20px;
+        margin-right: 0;
+        z-index: 1000;
+    }
 
-.logo-btn {
-padding-right: 10px;
-display: flex;
-gap: 1rem;
-margin: 0;
-font-size: 15px;
-}
+    .menu a {
+        padding: 10px;
+        text-align: center;
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    }
 
-.menu-btn {
-display: flex;
-align-items: center;
-cursor: pointer;
-}
+    #menu-btn {
+        display: block;
+        cursor: pointer;
+    }
 
-.logo-btn .fas {
-font-size: 18px;
-margin-right: 10px;
-}
+    .fas.fa-times {
+        display: none;
+    }
+
+    .fa-bars.active {
+        display: none;
+    }
+
+    .fa-times.active {
+        display: block;
+    }
+
+    .logo {
+        padding-left: 20px;
+        font-weight: bold;
+        font-size: 20px;
+        margin-left: 0;
+    }
+
+    .logo-btn {
+        padding-right: 10px;
+        display: flex;
+        gap: 1rem;
+        margin: 0;
+        font-size: 15px;
+    }
+
+    .menu-btn {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .logo-btn .fas {
+        font-size: 18px;
+        margin-right: 10px;
+    }
 
 }
