--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost&family=Manrope&display=swap');
 
-*{
+* {
     font-family: 'Jost', sans-serif;
     margin: 0;
     padding: 0;
@@ -21,19 +21,20 @@ body {
     background-color: rgb(233, 238, 255);
 }
 
-header{
+header {
     width: 100%;
     box-shadow: 0 1px 3px rgba(156, 156, 156, 0.761);
     z-index: 10;
     background-color: rgb(233, 238, 255)
 }
 
-a, .logo-btn div{
+a,
+.logo-btn div {
     text-decoration: none;
     color: rgb(34, 33, 33);
 }
 
-.navbar{
+.navbar {
     width: 100%;
     height: 60px;
     position: fixed;
@@ -43,17 +44,18 @@ a, .logo-btn div{
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     padding-left: 20px;
     font-weight: bold;
     font-size: 20px;
 }
 
-.logo a{
+.logo a {
     color: rgb(146, 167, 236);
 }
 
-.menu, .logo-btn{
+.menu,
+.logo-btn {
     padding-right: 25px;
     display: flex;
     gap: 1rem;
@@ -61,122 +63,127 @@ a, .logo-btn div{
     font-size: 15px;
 }
 
-.menu{
+.menu {
     margin-left: 20%;
 }
 
-.menu a:hover, .logo-btn a:hover, .logo-btn div:hover{
+.menu a:hover,
+.logo-btn a:hover,
+.logo-btn div:hover {
     color: rgb(146, 167, 236);
 }
 
-#menu-btn{
+#menu-btn {
     display: none;
 }
+
+
+.active {
+    color: rgb(146, 167, 236);
+}
+
 /*////////////////////////////////////////////////////////////////////*/
 
-#login-btn{
+#login-btn {
     cursor: pointer;
 }
 
-.login-form{
+.login-form {
     position: absolute;
     top: 120%;
-    right: 2rem;
-    width: 18rem;
+    right: 15px;
+    width: 250px;
     padding: 20px;
-    font-size: .8rem;
+    font-size: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    border-radius: 1.2rem;
+    border-radius: 15px;
     display: none;
     background-color: rgba(225, 231, 249, 0.917);
     z-index: 1000;
-} 
-
-h3{
-    font-size: 1.2rem;
-    padding-bottom: .5rem;
 }
 
-.box{
+h3 {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.box {
     width: 100%;
-    border-bottom: .1rem solid black;
-    border-width: .1rem;
-    padding: .5rem 0;
-    font-size: .8rem;
+    border-bottom: 5px solid black;
+    border-width: 1px;
+    padding: 5px 0;
+    font-size: 12px;
     text-transform: none;
-    margin: .4rem 0;
+    margin: 9px 0;
     outline: none;
     background: none;
 }
 
-.box:focus{
-    border-bottom: .1rem solid rgba(146, 167, 236, 0.497)
+.box:focus {
+    border-bottom: .1rem solid rgba(146, 167, 236, 0.748)
 }
 
-.remember{
+.remember {
     display: flex;
     align-items: center;
-    gap: .2rem;
-    padding: .5rem 0;
+    gap: 2px;
+    padding: 10px 0;
 }
 
-.remember label{
-    font-size: .8rem;
+.remember label {
+    font-size: 10px;
     cursor: pointer;
 }
 
 
-.remember input{
-    accent-color:  rgb(146, 167, 236)
+.remember input {
+    accent-color: rgb(146, 167, 236)
 }
 
-.btn{
+.btn {
     align-self: center;
     width: 100%;
-    margin: .5rem 0;
-    border-radius: 1.3rem;
-    padding: .2rem 0;
+    margin: 8px 0;
+    border-radius: 20px;
+    padding: 2px 0;
     cursor: pointer;
     background: none;
-    font-size: 1rem;
+    font-size: 12px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.409);
 }
 
-.btn:hover{
+.btn:hover {
     background-color: rgba(146, 167, 236, 0.497);
     color: white;
 }
 
-.links{
+.links {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: .3rem;
-    font-size: .7rem;
+    margin-top: 5px;
+    font-size: 9px;
 }
 
-.links a:hover{
+.links a:hover {
     text-decoration: underline;
     color: rgb(146, 167, 236);
 }
 
-.active{
-    color: rgb(146, 167, 236);
-}
-
-.main-body{
+.main-body {
     margin: 0 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
 }
+
 /*/////////////////////////////////////////////////////////////////////*/
 
-.footer{
+.footer {
     margin-top: auto;
     width: 100%;
     height: auto;
@@ -187,7 +194,7 @@ h3{
     padding: 10px 0;
 }
 
-.footer-text{
+.footer-text {
     font-size: small;
     color: rgb(113, 118, 135);
 }
@@ -195,7 +202,7 @@ h3{
 /*//////////////////////////////////////////////////////////////*/
 
 
-img{
+img {
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -203,7 +210,7 @@ img{
     position: absolute;
 }
 
-.img{
+.img {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -213,7 +220,7 @@ img{
     margin-top: 100px;
 }
 
-.contact{
+.contact {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -221,14 +228,14 @@ img{
     text-align: center;
 }
 
-.img{
+.img {
     background-color: rgb(198, 206, 238);
     position: relative;
 }
 
-.img h1{
+.img h1 {
     text-align: center;
-    color:rgb(233, 233, 254);
+    color: rgb(233, 233, 254);
     font-size: 45px;
     position: absolute;
     background-color: rgba(146, 167, 236, 0.488);
@@ -239,19 +246,19 @@ img{
     width: 100%;
 }
 
-h2{
+h2 {
     margin-top: 10px;
     font-size: 1.8rem;
 }
 
-p{
+p {
     font-size: larger;
     margin: 10px;
 }
 
 /*/////////////////////////////////////////*/
 
-.contact-form{
+.contact-form {
     background-color: rgba(250, 251, 255, 0.602);
     display: flex;
     flex-direction: column;
@@ -262,7 +269,8 @@ p{
     margin: 20px;
 }
 
-.contact-form input, textarea{
+.contact-form input,
+textarea {
     align-self: center;
     margin: 10px 0;
     width: 90%;
@@ -272,27 +280,27 @@ p{
 }
 
 
-.contact-form input{
+.contact-form input {
     border-bottom: 1px solid black;
     background: none;
     margin-bottom: 20px;
     height: 30px;
 
-    &:focus{
+    &:focus {
         border-bottom: .1rem solid rgba(146, 167, 236, 0.497)
     }
 }
 
 
-textarea{
+textarea {
     margin-top: 20px;
 }
 
-.submit{
+.submit {
     text-align: center;
 }
 
-#submit{
+#submit {
     width: 70px;
     height: 30px;
     outline: none;
@@ -300,26 +308,28 @@ textarea{
     background-color: rgb(222, 229, 255);
     cursor: pointer;
     margin-top: 10px;
-    
+
 }
 
-#submit:hover{
+#submit:hover {
     background-color: rgb(229, 234, 255);
 }
 
-#submit:active{
+#submit:active {
     box-shadow: 0 0 3px rgba(232, 232, 232, 0.603);
     background-color: rgb(198, 206, 238);
 }
+
 /*//////////////////////////////RESPONSIVE//////////////////////////////////////*/
 
 
-@media only screen and (max-width: 991px){
+@media only screen and (max-width: 991px) {
 
-    html{
+    html {
         font-size: 67%;
     }
-/* 
+
+    /* 
     header{
         padding: 1rem;
     } */
@@ -327,11 +337,11 @@ textarea{
 
 @media only screen and (max-width: 640px) {
 
-    .img{
+    .img {
         height: 200px;
     }
-    
-    .img h1{
+
+    .img h1 {
         text-align: center;
         color: #e5ebff;
         font-size: 35px;
@@ -344,76 +354,75 @@ textarea{
         width: 100%;
     }
 
-          
-/*//////////////////////////Nav Bar//////////////////////////////*/
 
-.menu{
-    display: none;
-}
+    /*//////////////////////////Nav Bar//////////////////////////////*/
 
-
-.menu.active {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    right: 0;
-    background-color: rgb(233, 238, 255);
-    width: 100%;
-    padding-left: 20px;
-    margin-right: 0;
-    z-index: 1000;
-}
-
-.menu a{
-    padding: 10px;
-    text-align: center;
-    width: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-#menu-btn {
-    display: block;
-    cursor: pointer;
-}
-
-.fas.fa-times {
-    display: none;
-    } 
-    
-.fa-bars.active{
+    .menu {
         display: none;
     }
 
-.fa-times.active {
-    display: block;
-}
 
-.logo {
-padding-left: 20px;
-font-weight: bold;
-font-size: 20px;
-margin-left: 0;
-}
+    .menu.active {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: rgb(233, 238, 255);
+        width: 100%;
+        padding-left: 20px;
+        margin-right: 0;
+        z-index: 1000;
+    }
 
-.logo-btn {
-padding-right: 10px;
-display: flex;
-gap: 1rem;
-margin: 0;
-font-size: 15px;
-}
+    .menu a {
+        padding: 10px;
+        text-align: center;
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    }
 
-.menu-btn {
-display: flex;
-align-items: center;
-cursor: pointer;
-}
+    #menu-btn {
+        display: block;
+        cursor: pointer;
+    }
 
-.logo-btn .fas {
-font-size: 18px;
-margin-right: 10px;
-}
+    .fas.fa-times {
+        display: none;
+    }
+
+    .fa-bars.active {
+        display: none;
+    }
+
+    .fa-times.active {
+        display: block;
+    }
+
+    .logo {
+        padding-left: 20px;
+        font-weight: bold;
+        font-size: 20px;
+        margin-left: 0;
+    }
+
+    .logo-btn {
+        padding-right: 10px;
+        display: flex;
+        gap: 1rem;
+        margin: 0;
+        font-size: 15px;
+    }
+
+    .menu-btn {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .logo-btn .fas {
+        font-size: 18px;
+        margin-right: 10px;
+    }
 
 }
-
