--- a/css/plan.css
+++ b/css/plan.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost&family=Manrope&display=swap');
 
-*{
+* {
     font-family: 'Jost', sans-serif;
     margin: 0;
     padding: 0;
@@ -22,19 +22,20 @@ body {
 }
 
 
-header{
+header {
     width: 100%;
     box-shadow: 0 1px 3px rgba(156, 156, 156, 0.761);
     z-index: 10;
     background-color: rgb(233, 238, 255)
 }
 
-a, .logo-btn div{
+a,
+.logo-btn div {
     text-decoration: none;
     color: rgb(34, 33, 33);
 }
 
-.navbar{
+.navbar {
     width: 100%;
     height: 60px;
     position: fixed;
@@ -44,17 +45,18 @@ a, .logo-btn div{
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     padding-left: 20px;
     font-weight: bold;
     font-size: 20px;
 }
 
-.logo a{
+.logo a {
     color: rgb(146, 167, 236);
 }
 
-.menu, .logo-btn{
+.menu,
+.logo-btn {
     padding-right: 25px;
     display: flex;
     gap: 1rem;
@@ -62,115 +64,117 @@ a, .logo-btn div{
     font-size: 15px;
 }
 
-.menu{
+.menu {
     margin-left: 20%;
 }
 
-.menu a:hover, .logo-btn a:hover, .logo-btn div:hover{
+.menu a:hover,
+.logo-btn a:hover,
+.logo-btn div:hover {
     color: rgb(146, 167, 236);
 }
 
-#menu-btn{
+#menu-btn {
     display: none;
 }
-/*////////////////////////////////////////////////////////////////////*/
 
-#login-btn{
+.active {
+    color: rgb(146, 167, 236);
+}
+
+/*////////////////////////////////////////////////////////////////////*/
+#login-btn {
     cursor: pointer;
 }
 
-.login-form{
+.login-form {
     position: absolute;
     top: 120%;
-    right: 2rem;
-    width: 18rem;
+    right: 15px;
+    width: 250px;
     padding: 20px;
-    font-size: .8rem;
+    font-size: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    border-radius: 1.2rem;
+    border-radius: 15px;
     display: none;
     background-color: rgba(225, 231, 249, 0.917);
     z-index: 1000;
-} 
-
-h3{
-    font-size: 1.2rem;
-    padding-bottom: .5rem;
 }
 
-.box{
+h3 {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.box {
     width: 100%;
-    border-bottom: .1rem solid black;
-    border-width: .1rem;
-    padding: .5rem 0;
-    font-size: .8rem;
+    border-bottom: 5px solid black;
+    border-width: 1px;
+    padding: 5px 0;
+    font-size: 12px;
     text-transform: none;
-    margin: .4rem 0;
+    margin: 9px 0;
     outline: none;
     background: none;
 }
 
-.box:focus{
-    border-bottom: .1rem solid rgba(146, 167, 236, 0.497)
+.box:focus {
+    border-bottom: .1rem solid rgba(146, 167, 236, 0.748)
 }
 
-.remember{
+.remember {
     display: flex;
     align-items: center;
-    gap: .2rem;
-    padding: .5rem 0;
+    gap: 2px;
+    padding: 10px 0;
 }
 
-.remember label{
-    font-size: .8rem;
+.remember label {
+    font-size: 10px;
     cursor: pointer;
 }
 
 
-.remember input{
-    accent-color:  rgb(146, 167, 236)
+.remember input {
+    accent-color: rgb(146, 167, 236)
 }
 
-.btn{
+.btn {
     align-self: center;
     width: 100%;
-    margin: .5rem 0;
-    border-radius: 1.3rem;
-    padding: .2rem 0;
+    margin: 8px 0;
+    border-radius: 20px;
+    padding: 2px 0;
     cursor: pointer;
     background: none;
-    font-size: 1rem;
+    font-size: 12px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.409);
 }
 
-.btn:hover{
+.btn:hover {
     background-color: rgba(146, 167, 236, 0.497);
     color: white;
 }
 
-.links{
+.links {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: .3rem;
-    font-size: .7rem;
+    margin-top: 5px;
+    font-size: 9px;
 }
 
-.links a:hover{
+.links a:hover {
     text-decoration: underline;
-    color: rgb(146, 167, 236);
-}
-
-.active{
     color: rgb(146, 167, 236);
 }
 
 /*/////////////////////////////////////////////////////////////////////*/
 
-.footer{
+.footer {
     margin-top: auto;
     width: 100%;
     height: auto;
@@ -181,30 +185,30 @@ h3{
     padding: 20px 0;
 }
 
-.footer-text{
+.footer-text {
     font-size: small;
     color: rgb(113, 118, 135);
 }
 
 /*//////////////////////////////////////////////////////////////*/
 
-.main-body h1{
+.main-body h1 {
     margin: 0 20px;
     color: #000;
     text-align: center;
 }
 
-.main-body h1 span{
+.main-body h1 span {
     color: rgb(146, 167, 236);
 }
 
-.main-body{
+.main-body {
     height: auto;
     width: 100%;
     margin: 100px 0;
 }
 
-.main-container{
+.main-container {
     margin-top: 20px;
     padding: 20px 100px;
     width: 100%;
@@ -215,7 +219,7 @@ h3{
     gap: 100px;
 }
 
-.plan-container{
+.plan-container {
     width: 250px;
     height: 300px;
     border-radius: 20px;
@@ -227,21 +231,25 @@ h3{
     position: relative;
 }
 
-.plan-title, .plan-icon, .services-list, .action-btn, .price{
+.plan-title,
+.plan-icon,
+.services-list,
+.action-btn,
+.price {
     margin: 5px 20px;
     text-align: center;
 
 }
 
-li{
+li {
     display: flex;
     flex-direction: column;
     text-align: left;
 }
 
-.action-btn{
+.action-btn {
     /* box-shadow: 0 0 2px rgba(0, 0, 0, 0.546);*/
-    background-color:rgba(240, 244, 255, 0.753); 
+    background-color: rgba(240, 244, 255, 0.753);
     align-self: center;
     width: 100px;
     padding: 5px;
@@ -250,40 +258,44 @@ li{
     margin-bottom: 10px;
     bottom: 5px;
 
-    &:hover{
+    &:hover {
         background-color: rgb(206, 216, 255);
     }
 
-    &:active{
+    &:active {
         background-color: rgb(206, 216, 255);
         transform: scale(0.85);
     }
 }
+
 /*//////////////////////////////RESPONSIVE//////////////////////////////////////*/
 
 
-@media only screen and (max-width: 1150px){
-    
-    .plan-container{
+@media only screen and (max-width: 1150px) {
+
+    .plan-container {
         width: 230px;
         height: 300px;
     }
-    .main-container{
+
+    .main-container {
         padding: 30px 20px;
         gap: 80px;
     }
 }
-@media only screen and (max-width: 991px){
 
-    html{
+@media only screen and (max-width: 991px) {
+
+    html {
         font-size: 67%;
     }
-    
-    .plan-container{
+
+    .plan-container {
         width: 180px;
         height: 230px;
     }
-    .main-container{
+
+    .main-container {
         padding: 30px 0;
         gap: 30px;
     }
@@ -291,13 +303,13 @@ li{
 
 @media only screen and (max-width: 640px) {
 
-    .main-container{
+    .main-container {
         flex-direction: column;
         align-items: flex-start;
 
     }
 
-    .plan-container{
+    .plan-container {
         padding-top: 20px;
         margin: 10px;
         width: calc(100% - 20px);
@@ -308,86 +320,84 @@ li{
 
     }
 
-    ul{
+    ul {
         display: flex;
         justify-content: space-evenly;
     }
 
-    li{
+    li {
         font-size: 15px;
     }
-        
-         
-/*//////////////////////////Nav Bar//////////////////////////////*/
-
-.menu{
-    display: none;
-}
 
 
-.menu.active {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    right: 0;
-    background-color: rgb(233, 238, 255);
-    width: 100%;
-    padding-left: 20px;
-    margin-right: 0;
-    z-index: 1000;
-}
+    /*//////////////////////////Nav Bar//////////////////////////////*/
 
-.menu a{
-    padding: 10px;
-    text-align: center;
-    width: 100%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-#menu-btn {
-    display: block;
-    cursor: pointer;
-}
-
-.fas.fa-times {
-    display: none;
-    } 
-    
-.fa-bars.active{
+    .menu {
         display: none;
     }
 
-.fa-times.active {
-    display: block;
+
+    .menu.active {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background-color: rgb(233, 238, 255);
+        width: 100%;
+        padding-left: 20px;
+        margin-right: 0;
+        z-index: 1000;
+    }
+
+    .menu a {
+        padding: 10px;
+        text-align: center;
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    }
+
+    #menu-btn {
+        display: block;
+        cursor: pointer;
+    }
+
+    .fas.fa-times {
+        display: none;
+    }
+
+    .fa-bars.active {
+        display: none;
+    }
+
+    .fa-times.active {
+        display: block;
+    }
+
+    .logo {
+        padding-left: 20px;
+        font-weight: bold;
+        font-size: 20px;
+        margin-left: 0;
+    }
+
+    .logo-btn {
+        padding-right: 10px;
+        display: flex;
+        gap: 1rem;
+        margin: 0;
+        font-size: 15px;
+    }
+
+    .menu-btn {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .logo-btn .fas {
+        font-size: 18px;
+        margin-right: 10px;
+    }
+
 }
-
-.logo {
-padding-left: 20px;
-font-weight: bold;
-font-size: 20px;
-margin-left: 0;
-}
-
-.logo-btn {
-padding-right: 10px;
-display: flex;
-gap: 1rem;
-margin: 0;
-font-size: 15px;
-}
-
-.menu-btn {
-display: flex;
-align-items: center;
-cursor: pointer;
-}
-
-.logo-btn .fas {
-font-size: 18px;
-margin-right: 10px;
-}
-
-
-}
-
